# mm-iot-esp32

./: README.md  VERSION.md
examples/iperf/main/src/: mm_app_common.c
examples/porting_assistant/: sdkconfig.defaults  sdkconfig.defaults.esp32c6
examples/porting_assistant/main/: CMakeLists.txt
examples/porting_assistant/main/src/: porting_assistant.c
examples/rf-test/: sdkconfig.defaults  sdkconfig.defaults.esp32c3
examples/rf-test/main/src/: mmhal_uart.c  rf-test.c
examples/scan/main/src/: scan.c
examples/sta_connect/main/src/: sta_connect.c
examples/sta_reboot/: sdkconfig.defaults
examples/sta_reboot/main/src/: sta_reboot.c
examples/transfer_reset/: sdkconfig.defaults
examples/transfer_reset/main/src/: mm_app_common.c
framework/mk/: core-esp32c3.mk  core-esp32c6.mk
framework/mm_shims/: CMakeLists.txt  Kconfig  idf_component.yml  mmhal.c  mmosal_shim_freertos_esp32.c
framework/morselib/: CMakeLists.txt  idf_component.yml
framework/src/mmipal/: idf_component.yml
framework/src/mmiperf/: idf_component.yml
framework/src/mmpktmem/: idf_component.yml
framework/src/mmutils/: idf_component.yml
framework/src/slip/: idf_component.yml
